--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div id="header" style="background-color: black;">
+	<div id="header">
 		<header>
 			<div>
 
@@ -18,10 +18,9 @@
 					<img id="pacman_title" src="photos/pacman_title.png"
 						style="width: 650px;height: 250px; top: -200px; margin-top:-50px;;margin-bottom: -150px;">
 				</center>
-				<h3 style="color: white;text-align: center; font-size: 20px; padding-top: 60px	;">made with &hearts; by
-					<span style="white-space: pre;letter-spacing: 5px;font-weight:bold; font-size :27px;"> IdHersk
-					</span> & <span style="white-space: pre;letter-spacing: 5px;font-weight:bold; font-size :27px;">
-						DarAb </span></h3>
+				<h3 id=ourNames>made with &hearts; by
+					<span id="names"> IdHersk </span> & <span id="names"> DarAb </span>
+				</h3>
 			</div>
 		</header>
 	</div>
@@ -42,55 +41,44 @@
 		</div>
 	</nav> -->
 	<div id="Menu">
-		<ul id="menuContainar">	
+		<ul id="menuContainar">
 			<li><button id="Home_btn" class="button" onClick="changeScreen('home-screen')"> Home</button></li>
-			<li><button id="Registration_btn" class="button" onClick="changeScreen('registration-screen')">Registration</button></li>
+			<li><button id="Registration_btn" class="button"
+					onClick="changeScreen('registration-screen')">Registration</button></li>
 			<li><button id="Login_btn" class="button" onClick="changeScreen('login-screen')">Login</button></li>
-			<li><button id="About_btn" class="button" onClick="changeScreen('about-screen')" > About</button></li>
+			<li><button id="About_btn" class="button" onClick="changeScreen('about-screen')"> About</button></li>
 		</ul>
 	</div>
 	<div id="Content" class="Content">
-		<div id="home-screen" class="screen" style="width: 380px;
-    /* height: 480px; */
-    position: relative;
-    margin: 6% auto;
-    background: rgb(20, 20, 20);
-    padding: 5px;
-    overflow: hidden;
-    opacity: 0.8;">
+		<div id="home-screen" class="screen">
+			<img id="pacman_title" src="photos/logo.png">
 			<!-- class="form-box" -->
 			<div>
-				<center>
-					<img id="pacman_title" src="photos/logo.png">
-				</center>
 			</div>
 			<div class="Home_button">
-				<div id="btn"></div>
-				<button id="reg_btn" class="button-lr" onClick="register()">Register</button>
-				<button id="login_btn" class="button-lr" onClick="login()">Log in</button>
+				<button id="reg_btn" class="button-lr" onClick="changeScreen('registration-screen')">Register</button>
+				<button id="login_btn" class="button-lr" onClick="changeScreen('login-screen')">Log in</button>
 			</div>
-			<!-- <form id="login" class="input-group">
+		</div>
+		<div id="registration-screen" class="screen" style="display: none;">
+			<form id="register" class="input-group">
+				<div>
+					<input type="text" class="input_field" placeholder="User ID" required>
+					<input type="email" class="input_field" placeholder="Enter email address" required>
+					<input type="text" class="input_field" placeholder="Enter Password" required>
+					<button type="submit" class="submit-btn">register</button>
+				</div>
+			</form>
+		</div>
+		<div id="login-screen" class="screen" style="display: none;">
+			<form id="login" class="input-group">
 				<div>
 					<input type="text" class="input_field" placeholder="User ID" required>
 					<input type="text" class="input_field" placeholder="Enter Password" required>
 					<button type="submit" class="submit-btn">Log in</button>
-			</form> -->
+				</div>
+			</form>
 		</div>
-		<!-- <form id="register" class="input-group">
-			<div>
-				<input type="text" class="input_field" placeholder="User ID" required>
-				<input type="email" class="input_field" placeholder="Enter email address" required>
-				<input type="text" class="input_field" placeholder="Enter Password" required>
-				<button type="submit" class="submit-btn">register</button>
-			</div>
-		</form> -->
-		<div id="registration-screen" class="screen" style="display: none;">
-			<h1 style="text-align: center;">this is the registration screen</h1>
-		</div>
-		<div id="login-screen" class="screen" style="display: none;">
-			<h1 style="text-align: center;">this is the log-in screen</h1>
-		</div>
-
 		<div id="about-screen" class="screen" style="display: none;">
 			<h1 style="text-align: center;">this is the about screen</h1>
 		</div>
@@ -113,58 +101,62 @@
 		</div>
 
 	</div>
-
-	<footer>
-		<div class=footer-container>
-			<div class="footer-cointainer-child dar">
-				<div class="footer-social-icons">
-					<h4 class="_14">Dar Ab</h4>
-					<ul class="social-icons">
-						<li><a href="https://www.linkedin.com/in/dar-abu-53a581237/" class="social-icon"> <i
-									class="fa fa-linkedin"></i></a></li>
-						<li><a href="https://github.com/Darabu273" class="social-icon"> <i class="fa fa-github"></i></a>
-						</li>
-						<li><a href="mailto:darabu@post.bgu.ac.il" class="social-icon"> <i class="fa fa-google"></i></a>
-						</li>
-						<li><a href="https://www.facebook.com/dar.abu.3" class="social-icon"> <i
-									class="fa fa-facebook"></i></a></li>
-						<li><a href="https://www.instagram.com/dar_abu/" class="social-icon"> <i
-									class="fa fa-instagram"></i></a></li>
-					</ul>
+	<div id="footer">
+		<footer>
+			<div class=footer-container>
+				<div class="footer-cointainer-child dar">
+					<div class="footer-social-icons">
+						<h4 class="_14">Dar Ab</h4>
+						<ul class="social-icons">
+							<li><a href="https://www.linkedin.com/in/dar-abu-53a581237/" class="social-icon"> <i
+										class="fa fa-linkedin"></i></a></li>
+							<li><a href="https://github.com/Darabu273" class="social-icon"> <i
+										class="fa fa-github"></i></a>
+							</li>
+							<li><a href="mailto:darabu@post.bgu.ac.il" class="social-icon"> <i
+										class="fa fa-google"></i></a>
+							</li>
+							<li><a href="https://www.facebook.com/dar.abu.3" class="social-icon"> <i
+										class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/dar_abu/" class="social-icon"> <i
+										class="fa fa-instagram"></i></a></li>
+						</ul>
+					</div>
 				</div>
-			</div>
-			<div class="footer-cointainer-child ido">
-				<div class="footer-social-icons">
-					<h4 class="_14">Ido Hersk</h4>
-					<ul class="social-icons">
-						<li><a href="https://www.linkedin.com/in/ido-hersko/" class="social-icon"> <i
-									class="fa fa-linkedin"></i></a></li>
-						<li><a href="https://github.com/idohersko" class="social-icon"> <i class="fa fa-github"></i></a>
-						</li>
-						<li><a href="mailto:hersko@post.bgu.ac.il" class="social-icon"> <i class="fa fa-google"></i></a>
-						</li>
-						<li><a href="https://www.facebook.com/ido.hersko/" class="social-icon"> <i
-									class="fa fa-facebook"></i></a></li>
-						<li><a href="https://www.instagram.com/ido_hersko/" class="social-icon"> <i
-									class="fa fa-instagram"></i></a></li>
-					</ul>
+				<div class="footer-cointainer-child ido">
+					<div class="footer-social-icons">
+						<h4 class="_14">Ido Hersk</h4>
+						<ul class="social-icons">
+							<li><a href="https://www.linkedin.com/in/ido-hersko/" class="social-icon"> <i
+										class="fa fa-linkedin"></i></a></li>
+							<li><a href="https://github.com/idohersko" class="social-icon"> <i
+										class="fa fa-github"></i></a>
+							</li>
+							<li><a href="mailto:hersko@post.bgu.ac.il" class="social-icon"> <i
+										class="fa fa-google"></i></a>
+							</li>
+							<li><a href="https://www.facebook.com/ido.hersko/" class="social-icon"> <i
+										class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/ido_hersko/" class="social-icon"> <i
+										class="fa fa-instagram"></i></a></li>
+						</ul>
+					</div>
 				</div>
-			</div>
-			<div class="footer-cointainer-child ido">
-				<div class="footer-social-icons">
-					<h4 class="_14">About the project</h4>
-					<span class="_14"> This project was made in the scope of the Web Development course of Prof. Erez
-						Shalom and Mr.
-						David Zeltser in the Ben-Gurion University, Israel </span>
+				<div class="footer-cointainer-child ido">
+					<div class="footer-social-icons">
+						<h4 class="_14" style="vertical-align:2px">About the project</h4>
+						<span style="color: rgb(119, 119, 119);font-size: 13px;vertical-align:2px;">
+							This project was made in the scope of the Web Development course of Prof.
+							Erez Shalom and Mr.David Zeltser in the Ben-Gurion University, Israel </span>
+					</div>
 				</div>
+
 			</div>
-
-		</div>
-	</footer>
-
+		</footer>
+	</div>
 
 	<!--  scripts  -->
-	<script>
+	<!-- <script>
 		var x = document.getElementById("login");
 		var y = document.getElementById("register");
 		var z = document.getElementById("btn");
@@ -179,7 +171,7 @@
 			x.style.left = "50px";
 			y.style.left = "450px";
 			z.style.left = "0px";
-		}
+		} -->
 
 	</script>
 
