last changes of tyle and fix little problems

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 					</div>
 				</div>
 				<div class="footer-cointainer-child ido">
-					<div class="footer-social-icons" style="margin-bottom: -145px;">
+					<div class="footer-social-icons" style="margin-bottom: -458px;">
 						<h4 style="
 				  text-align: center;
 				  font-size: 25px;
@@ -280,10 +280,12 @@
 								</P>
 							</div>
 						</div>
-						<div> <img id="dar_ido" src="photos/other/info_pacman.jpg" style="width: 250px;
+						<div> <img id="dar_ido" src="photos/other/info_pacman.jpg" style="width: 220px;
 							height: 350px;
 							margin-bottom: -40px;
-							margin-top: 5px;" /></div>
+							margin-top: 5px;
+							margin-left: 50PX";
+							/></div>
 						
 
 					</div>
@@ -300,7 +302,7 @@
 	</div>
 	<div id="footer">
 		<footer>
-			<div class=footer-container>
+			<div class=footer-container style="background-color: black;">
 				<div class="footer-cointainer-child dar">
 					<div class="footer-social-icons">
 						<h4 class="_14">Dar Ab</h4>
